# inhabit

./: .gitignore  CNAME  README.md  hero3d.js  index.html  script.js  scrollarms.js  style.css
software/: .coderabbit.yaml  .gitignore  00-Inhabit Home.md  AGENTS.md  AGENT_BINDINGS.md  BENCHMARKS.md  BENCH_READY_V0_2.md  CLAUDE.md  CLEANUP.md  COLLABORATION.md  HANDOFF.md  INHABIT_6_LEVEL_PLAYBOOK.md  KNOWLEDGE-TRANSFER.md  MASTER_PLAN.md  MASTER_TASK_QUEUE.md  NEXUS-MAP.html  ORCHESTRATION.md  ORCHESTRATOR_HANDOFF.md  POST_GREEN_ROADMAP.md  PROGRESS.md  README.md  REVIEW-GUIDE.md  RUNBOOK.md  SETUP_GUIDE.md  START_HERE.md  STATUS.md  ULTRACODE_AUDIT.md  ULTRACODE_READY.md  ULTRACODE_TASK_QUEUE.md  WORKER_PROCESS_EVIDENCE.md
software/.claude/: CLAUDE.md  settings.json
software/.claude/agents/: data-pipeline-engineer.md  embedded-reviewer.md  firmware-engineer.md  hardware-bringup.md  research-scout.md  ros2-integrator.md
software/.claude/commands/: bringup.md  can-msg.md  orchestrate.md  review-firmware.md  ros2-node.md
software/.github/workflows/: ci.yml
software/.obsidian/: workspace.json
software/docs/: README.md  bringup-log.md  hardware-free-data-path-smoke-test.md
software/docs/00-start/: START-HERE-Inhabit.md
software/docs/agents/: Agent Operating Model.md
software/docs/architecture/: System Architecture.md
software/docs/bench/: EVIDENCE_TEMPLATES.md  P-C-TIMING-BENCH.json  P-C-TIMING-BENCH.md  firmware-bench-evidence.md
software/docs/benchmarks/: Benchmark Execution Plan.md
software/docs/checklists/: After PCB Arrival Checklist.md  Agent Round Checklist.md  Before First Power Checklist.md  Before Merge Checklist.md  Before PCB Order Checklist.md  CAN Bringup Checklist.md  (+4 more)
software/firmware/: BENCH_TESTS.md  CLAUDE.md  README.md
software/host/: CLAUDE.md  README.md  pyproject.toml
software/host/adapters/: __init__.py  custom_can_adapter.py  replay_adapter.py  ros2_adapter.py  ur_adapter.py
software/host/events/: __init__.py  contact.py  detectors.py  impact.py  interface.py  labels.py  scoring.py
software/host/export/: __init__.py  _gate.py  base.py  lerobot.py  lerobot_exporter.py  parquet.py  registry.py
software/host/inhabit_bridge/: OPERATING.md  README.md  __init__.py  bridge_node.py  conversion.py  package.xml  setup.cfg  setup.py  sources.py  transport_source.py
software/host/inhabit_bridge/launch/: bridge.launch.py
software/host/inhabit_bridge/tests/: test_transport_source.py
software/host/inhabit_can/: __init__.py  adapter.py  codec.py  pvt.py
software/host/inhabit_core/: __init__.py  registry.py
software/host/inhabit_description/: __init__.py  arm_config.py  urdf.py
software/host/inhabit_msgs/: CMakeLists.txt  package.xml
software/host/inhabit_msgs/msg/: JointPodState.msg
software/host/logger/: CLAUDE.md  DATASET_READINESS.md  __init__.py  jitter.py  parquet_io.py  recorder.py
software/host/logger/sinks/: __init__.py  inmem.py  interface.py  parquet_atomic.py
software/host/sensors/: __init__.py  interface.py  replay.py  sim_proprio.py  sim_scenario.py
software/host/sim/: __init__.py  chaos.py  rng.py  robot.py  scenario.py
software/host/tests/: test_adapters.py  test_bridge.py  test_calibration_helper.py  test_codec.py  test_contact_detector.py  test_custom_can_adapter.py  test_dataset_readiness.py  test_dataset_roundtrip.py  test_e2e_pipeline.py  test_enum.py  test_events.py  test_events_labels_scoring.py  test_export_timing_meta.py  test_exporter_registry.py  test_impact_detector.py  test_inhabit_description.py  test_integration.py  test_logger.py  test_postgreen_smoke.py  test_registry_core.py  test_scenario.py  test_sensors.py  test_sensors_replay.py  test_sensors_scenario.py  test_sim_chaos.py  test_sim_cli_jitter.py  test_sim_golden.py  test_sim_noise.py  test_sim_rng.py  test_sim_robot.py  test_sinks.py  test_timing_align.py  test_timing_bench.py  test_timing_core.py  test_timing_normalize.py  test_transport.py  test_transport_registry.py  test_ultracode_dataset_gate.py  test_urdf_import_cli.py  test_viz.py  (+1 more)
software/host/tests/conformance/: __init__.py  test_adapter_conformance.py  test_episode_sink_conformance.py  test_event_detector_conformance.py  test_exporter_conformance.py  test_sensor_conformance.py  test_transport_conformance.py
software/host/tests/fixtures/: .gitattributes  make_sample_canlog.py  make_scenario_fixture.py  make_sim_fixture.py  pick_place.episode.txt  pick_place.scenario.json  sample.canlog
software/host/timing/: __init__.py  align.py  bench.py  clocks.py  export_meta.py  normalize.py  stamp.py
software/host/tools/: calibrate.py
software/host/tools/dataset/: __init__.py  __main__.py  scenario_episode.py  sim_adapter.py
software/host/tools/urdf_import/: __init__.py  __main__.py
software/host/transport/: __init__.py  file.py  inmem.py  interface.py  registry.py  slcan.py  socketcan.py
software/host/viz/: DEMO.md  README.md  __main__.py  ascii_viz.py  runner.py
software/scripts/: install_sw2urdf.ps1  verify.ps1  verify.sh
(+77 files in other folders)
