<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inhabit_msgs</name>
  <version>0.1.0</version>
  <description>
    Inhabit custom ROS 2 messages. JointPodState carries a decoded smart-joint-pod
    CAN frame stamped with a monotonic host RX time. ROS 2 distro: Jazzy Jalisco.
  </description>
  <maintainer email="youssefanbar2007@gmail.com">Youssef Anbar</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
